crates/djls-semantic/src/blocks/snapshots/djls_semantic__blocks__tree__tests__blocktree.snap
---
source: crates/djls-semantic/src/blocks/tree.rs
expression: block_tree
---
roots:
  - 0
  - 2
  - 9
blocks:
  - span:
      start: 3
      length: 55
    nodes:
      - Segment:
          label: block
          span:
            start: 3
            length: 14
          body: 1
  - span:
      start: 19
      length: 20
    nodes: []
  - span:
      start: 64
      length: 290
    nodes:
      - Segment:
          label: if
          span:
            start: 64
            length: 26
          body: 3
      - Segment:
          label: else
          span:
            start: 311
            length: 6
          body: 8
  - span:
      start: 92
      length: 217
    nodes:
      - Leaf:
          label: "<var>"
          span:
            start: 110
            length: 11
      - Block:
          name: if
          span:
            start: 134
            length: 22
          body: 4
  - span:
      start: 134
      length: 172
    nodes:
      - Segment:
          label: if
          span:
            start: 134
            length: 22
          body: 5
      - Segment:
          label: elif
          span:
            start: 192
            length: 20
          body: 6
      - Segment:
          label: else
          span:
            start: 250
            length: 6
          body: 7
  - span:
      start: 158
      length: 32
    nodes: []
  - span:
      start: 214
      length: 34
    nodes: []
  - span:
      start: 258
      length: 39
    nodes: []
  - span:
      start: 319
      length: 26
    nodes: []
  - span:
      start: 360
      length: 56
    nodes:
      - Segment:
          label: for
          span:
            start: 360
            length: 19
          body: 10
  - span:
      start: 381
      length: 25
    nodes:
      - Leaf:
          label: "<var>"
          span:
            start: 392
            length: 6
